adding some adjustments

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Styles Conference</title>
   </head>
   <body>
-    <header>
-    <a href="index.html">  
+    <header class="container">
+    <a href="index.html">
     <h1>Styles Conference</h1>
     </a>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
     </header>
-    <section>
+    <section class="container">
       <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
@@ -26,7 +26,7 @@
           August!</p>
       <a href="register.html">Register</a>
     </section>
-    <section>
+    <section class="container">
       <section>
         <a href="speakers.html">
         <h5>Speakers</h5>
@@ -50,7 +50,7 @@
       </section>
     </section>
 
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
