--- a/venue.html
+++ b/venue.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <header>
+    <header class="container">
     <a href="index.html">
     <h1>Styles Conference</h1>
     </a>
@@ -19,7 +19,7 @@
       <a href="register.html">Register</a>
     </nav>
     </header>
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
