adding the css to the button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>Every year the brightest web designers and front-end developers
          descend on Chicago to discuss the latest technologies. Join us this
           August!</p>
-      <a href="register.html">Register</a>
+      <a href="register.html" class="btn btn-alt">Register</a>
     </section>
     <section class="container">
       <section>
