--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </a>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
     </header>
-    <section class="container">
+    <section class="hero container">
       <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
