styling the header and footer

--- a/register.html
+++ b/register.html
@@ -6,9 +6,9 @@
     <title></title>
   </head>
   <body>
-    <header class="container">
+    <header class="container group">
     <a href="index.html">
-    <h1>Styles Conference</h1>
+    <h1 class="logo">Styles <br> Conference</h1>
     </a>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
     <nav>
@@ -19,7 +19,7 @@
       <a href="register.html">Register</a>
     </nav>
     </header>
-    <footer class="container">
+    <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
