--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Styles Conference</title>
   </head>
   <body>
-    <header class="container">
+    <header class="group container">
     <a href="index.html">
-    <h1>Styles Conference</h1>
+    <h1 class="logo">Styles <br> Conference</h1>
     </a>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="speakers.html">Speakers</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="venue.html">Venue</a>
+      <a href="register.html">Register</a>
+    </nav>
     </header>
     <section class="hero container">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
-      </nav>
       <h2>Dedicated to the Craft of Building Websites</h2>
       <p>Every year the brightest web designers and front-end developers
          descend on Chicago to discuss the latest technologies. Join us this
@@ -50,7 +50,7 @@
       </section>
     </section>
 
-    <footer class="container">
+    <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
