--- a/speakers.html
+++ b/speakers.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title></title>
   </head>
   <body>
@@ -10,8 +11,8 @@
     <a href="index.html">
     <h1 class="logo">Styles <br> Conference</h1>
     </a>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-    <nav>
+    <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <nav class="nav">
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
       <a href="schedule.html">Schedule</a>
@@ -21,7 +22,7 @@
     </header>
     <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
