--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
     <title>Styles Conference</title>
   </head>
   <body>
     <header class="group container">
-    <a href="index.html">
-    <h1 class="logo">Styles <br> Conference</h1>
-    </a>
-    <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-    <nav>
+
+    <h1 class="logo"><a href="index.html">Styles <br> Conference</a></h1>
+
+    <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+    <nav class="nav primary-nav">
       <a href="index.html">Home</a>
       <a href="speakers.html">Speakers</a>
       <a href="schedule.html">Schedule</a>
@@ -26,22 +27,22 @@
           August!</p>
       <a href="register.html" class="btn btn-alt">Register</a>
     </section>
-    <section class="container">
-      <section>
+    <section class="grid">
+      <section class="teaser col-1-3">
         <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
         </a>
         <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-      </section>
-      <section>
+      </section><!--
+      --><section class="teaser col-1-3">
         <a href="schedule.html">
         <h5>Schedule</h5>
         <h3>Three Inspiring Days</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-      </section>
-      <section>
+      </section><!--
+      --><section class="teaser col-1-3">
         <a href="venue.html">
         <h5>Venue</h5>
         <h3>The Chicago Theatre</h3>
@@ -52,7 +53,7 @@
 
     <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
